<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatPage">

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="16dp"
        android:text="@string/start_chatting"
        android:textAlignment="center"
        android:textColor="#717171"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/toolbar_height"
        android:clipToPadding="false"
        android:padding="16dp"
        tools:listitem="@layout/chat_text_message" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:id="@+id/message_footer"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_border"
            android:elevation="1dp">

            <ImageButton
                android:id="@+id/send_image_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:src="@drawable/ic_image_green_24dp" />

            <ImageButton
                android:id="@+id/share_location_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:src="@drawable/ic_location_on_24dp" />

            <EditText
                android:id="@+id/messageEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="left"
                android:hint="@string/hint_message"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/sendButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_send_24dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/UrlToBit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true" />

</RelativeLayout>
