...
    <string name="radius_map_setting_key">radius_map_setting_key</string>
    <string name="update_notifications_setting_key">update_notifications_setting_key</string>
    <string name="chat_notifications_setting_key">chat_notifications_setting_key</string>
    <string name="map_style_key">map_style</string>


    <string name="error_send_msg_chat">Error sending message</string>
    <!-- Help preferences -->
    <string name="error_database_sync">Failed fetching data</string>
    <string name="help_title">Send feedback</string>
    <string name="help_subtitle">Report technical issues or suggest new features</string>
    <string name="request_favor_draft">Save draft</string>
    <string name="edit_favor">Edit</string>
...
    <string name="optional_text">Optional</string>
    <string name="upload_pic_btn">upload picture</string>
    <string name="camera_btn">open camera</string>

    <string name="set_location_message">The favor location is set to your current position. Would you like to change it?</string>
    <string name="set_location_yes">Yes, take me to the map</string>
    <string name="set_location_no">No, my current position is fine</string>
    <string name="done_from_request_view">Done</string>
    <!--Chat Share location -->
    <string name="share_location_message">Would you like to propose a new location or share your current location?</string>
    <string name="share_location_propose">I\'d like to share a new location</string>
    <string name="share_location_current">Share my current location</string>
    <!-- List item menu -->
</resources>

