<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_green_50"
    tools:context="view.tabs.addFavor.FavorRequestView">

    <!-- add above: android:background="@color/material_green_50"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_req_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="20dp">


        <Button
            android:id="@+id/request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favor_confirm_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/title_request_view"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:autofillHints=""
            android:hint="@string/favor_title_hint"
            android:inputType="textShortMessage"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_button" />


        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top|start"
            android:hint="@string/favor_details_hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="5"
            android:minLines="3"
            android:scrollbars="vertical"

            app:layout_constraintTop_toBottomOf="@id/title_request_view" />

        <LinearLayout
            android:id="@+id/picture_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details">

            <Button
                android:id="@+id/add_picture_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:drawableEnd="@drawable/ic_image_24dp"
                android:text="Upload" />

            <Button
                android:id="@+id/add_camera_picture_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_photo_camera_24dp"
                android:text="Take" />

            <Button
                android:id="@+id/location_request_view_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_location_on_24dp"
                android:text=""/>

        </LinearLayout>


        <ImageView
            android:id="@+id/image_view_request_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/favor_img_content_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture_buttons" />

        <ProgressBar
            android:id="@+id/loading_panel"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="125dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/image_view_request_view"
            app:layout_constraintEnd_toEndOf="@id/image_view_request_view"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@id/image_view_request_view"
            app:layout_constraintTop_toTopOf="@id/image_view_request_view" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textColor="#FF0000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/request_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>